# hsi-preprocessing-toolkit

./: .gitignore  AGENTS.md  Dockerfile  MEMO.md  README.md  augsburg_hsi_selected_spectral.mat  build.ps1  main.py  main.spec  pyproject.toml  start.cmd  test.py  一键启动.cmd
.github/workflows/: pypi.yml
script/: dist.sh  hpt.cmd  hsi_preprocessing_toolkit.cmd
src/: main.py  scanner_calc.py
src/hsi_preprocessing_toolkit/: __main__.py  algorithm.py  common.py  constant.py  i18n.py  util.py
src/hsi_preprocessing_toolkit/asset/page/: about.en.md  about.zh.md
src/hsi_preprocessing_toolkit/component/: create_logger.py  logging_box.py
src/hsi_preprocessing_toolkit/page/: about.py  hsi_preprocessing.py  scanner_calc.py
test/: test.py
