[project]
name = "hdr2mat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "gradio>=5.35.0",
    "matplotlib>=3.10.3",
    "rasterio>=1.4.3",
    "rs-fusion-datasets>=0.16.0",
    "scipy>=1.15.3",
]


[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
