[project]
name = "hsi-preprocessing-toolkit"
version = "0.1.0"
description = "Hsi Preprocessing Toolkit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "gradio>=5.35.0",
    "matplotlib>=3.10.3",
    "rasterio>=1.4.3",
    "rs-fusion-datasets>=0.16.0",
    "scipy>=1.15.3",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[build-system]
requires = ["uv_build >= 0.8.0, <0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["hsi-preprocessing-toolkit/__main__.py"]


[project.scripts]
hsi_preprocessing_toolkit = "hsi_preprocessing_toolkit.__main__:main"