[project]
name = "hsi-preprocessing-toolkit"
version = "0.1.0"
description = "HSI Preprocessing Toolkit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "gradio>=5.35.0",
    "matplotlib>=3.10.3",
    "rasterio>=1.4.3",
    "rs-fusion-datasets>=0.16.0",
    "scipy>=1.16.0",
]
authors = [
  { name = "songyz2023", email = "songyz2023dlut@outlook.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
license = "AGPL-3.0-only"

[project.urls]
Documentation = "https://github.com/songyz2019/hsi-preprocessing-toolkit#readme"
Issues = "https://github.com/songyz2019/hsi-preprocessing-toolkit/issues"
Source = "https://github.com/songyz2019/hsi-preprocessing-toolkit"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[build-system]
requires = ["uv_build >= 0.9.0, <0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["hsi-preprocessing-toolkit/__main__.py"]


[project.scripts]
hsi_preprocessing_toolkit = "hsi_preprocessing_toolkit.__main__:main"